--- a/config.yaml
+++ b/config.yaml
@@ -7,11 +7,11 @@
 THREADS: 30
 MEMORY: "300g"
 LIBRARY_INFO:
-  sample_size: 5
+  sample_size: 96
   # datein lib_name: (if possible) annotate library name with the date when macrogen finished sequencing
-  lib_name: "libname"
+  lib_name: "mmHSC6-set1"
 FILTER:
-  P2_adapter_index: 3
+  P2_adapter_index: "3"
   P2_adapter_sequence: # sequences for trimming R1_3prime
     1: "AGCGATCTAAGATCGGAAGAGCGGTTCAGCAGGAATGCCGA"
     2: "AATAGAGAGAGATCGGAAGAGCGGTTCAGCAGGAATGCCGA"
