--- a/config.yaml
+++ b/config.yaml
@@ -9,9 +9,9 @@ MEMORY: "300g"
 LIBRARY_INFO:
   sample_size: 96
   # datein lib_name: (if possible) annotate library name with the date when macrogen finished sequencing
-  lib_name: "mmHSC6-set1"
+  lib_name: "K9M-set2"
 FILTER:
-  P2_adapter_index: "3"
+  P2_adapter_index: "4"
   P2_adapter_sequence: # sequences for trimming R1_3prime
     1: "AGCGATCTAAGATCGGAAGAGCGGTTCAGCAGGAATGCCGA"
     2: "AATAGAGAGAGATCGGAAGAGCGGTTCAGCAGGAATGCCGA"
@@ -35,7 +35,7 @@ FILTER:
 # NOTE: reference genome-specific mapping parameters
 MAPPING:
       # alignments: 10 # "In -k <N> mode, Bowtie 2 searches for up to N distinct, valid alignments for each read" However, the MAPQ becomes meaningless in -k mode. Thus I disable this option in bowtie2 rule.
-      reference: "/home/nison/work/refgenome/TAIR10/bowtie2_index/tair10"
+      reference: "/usr/local/data/TAIR10/bowtie2_index/tair10"
       # True multiread can get MAPQ 0 or 1. In the GBS analysis I only take primary reads but the primary reads of the true multiread is random: So I filter out the alignments with MAPQ below 2.
       MAPQmaxi: 2 # -q
       sortMemory: "5G"
@@ -45,8 +45,8 @@ MARKER:
   complete: "data/ColLer_markers/coller_complete_v2.tsv"
   mask: "data/ColLer_markers/coller_gbs_marker_v2.tsv"
 REFGENOME: 
-  fasta: "/home/nison/work/refgenome/TAIR10/TAIR10.fasta"
-  fai: "/home/nison/work/refgenome/TAIR10/TAIR10.fasta.fai"
+  fasta: "/usr/local/data/TAIR10/TAIR10.fasta"
+  fai: "/usr/local/data/TAIR10/TAIR10.fasta.fai"
 TSV:
   binSize: 100000
   binName: "100kb"
